<resources>
    <string name="app_name">RestaurantApplication</string>
    <string name="back_content_description">Back</string>
    <string name="settings">Settings</string>
    <string name="error_session">User session error. Please log in again.</string>
    <string name="error_select_date_time">Please select date and time</string>
    <string name="error_booking_exists">You already have a booking at this time</string>
    <string name="booking_confirmed">Booking confirmed</string>
    <string name="booking_failed">Booking failed</string>
    <string name="login_failed">Incorrect details – try again</string>
    <string name="network_error">Network error</string>
    <string name="account_deleted">Account deleted successfully</string>
    <string name="delete_failed">Deletion failed.</string>
    <string name="notifications_disabled_msg">Notifications are disabled.</string>
    <string name="error_parsing_data">Error parsing data</string>
    <string name="first_name_label">First Name</string>
    <string name="surname_label">Surname</string>
    <string name="email_label">Email</string>
    <string name="confirm_password_label">Re-enter password</string>
    <string name="signup_button_label">Sign up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="error_all_fields_required">All fields required</string>
    <string name="error_invalid_email">Enter a valid email</string>
    <string name="error_passwords_dont_match">Passwords don\'t match</string>
    <string name="error_username_taken">Username is already registered</string>
    <string name="registration_success">Account created successfully</string>
    <string name="registration_failed">Registration failed</string>
    <string name="logo_title">RESTAURANT APP</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="error_enter_details">Please enter username and password</string>
    <string name="guest_welcome">Welcome to the Restaurant App, please find everything you need below, We hope to see you soon!</string>
    <string name="menu_title">MENU</string>
    <string name="reservation_title">Make a reservation here!</string>
    <string name="select_date_time_label">Please select a date and time</string>
    <string name="date_label">Date</string>
    <string name="time_label">Time</string>
    <string name="confirm_reservation">Confirm Reservation?</string>
    <string name="your_bookings_title">Your Bookings</string>
    <string name="amend">Amend</string>
    <string name="cancel">Cancel</string>
    <string name="notification_settings_title">Notification Settings</string>
    <string name="cancel_notify_text">Receive notifications when your booking is amended or cancelled?</string>
    <string name="status_notify_text">Receive notifications when you cancel a reservation?</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_confirmation_title">Delete Account?</string>
    <string name="delete_confirmation_message">Are you sure you want to delete your account? This cant be undone.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="staff_notify_new_booking">Receive a notification when there is a new booking?</string>
    <string name="staff_notify_amend_cancel">Receive a notification when a guest amends/cancels their booking</string>
    <string name="add_item_title">Add Item to Menu</string>
    <string name="item_name_label">Item Name</string>
    <string name="price_label_gbp">Price (£)</string>
    <string name="description_label">Description</string>
    <string name="upload_img_btn">UPLOAD IMAGE</string>
    <string name="img_preview_desc">Image preview</string>
    <string name="add_to_menu_final">ADD ITEM TO MENU</string>
    <string name="delete_item_title">Delete Menu Items</string>
    <string name="search_item_label">Search for menu item</string>
    <string name="item_name_to_delete_label">Name of Item</string>
    <string name="confirm_delete_prompt">Are you sure you want to delete this Item?</string>
    <string name="delete_item_btn">DELETE ITEM</string>
    <string name="notif_channel_name">Restaurant Updates</string>
    <string name="notif_booking_confirmed_title">Booking Confirmed</string>
    <string name="notif_booking_confirmed_msg">Your reservation for %1$s at %2$s has been successfully placed.</string>
    <string name="notif_booking_cancelled_title">Booking Cancelled</string>
    <string name="notif_booking_cancelled_msg">You have cancelled your booking for %1$s at %2$s.</string>
    <string name="notif_staff_alert_title">Booking Alert</string>
    <string name="notif_staff_alert_msg">%1$s has a new or updated booking for %2$s at %3$s.</string>
    <string name="notif_staff_cancel_msg">%1$s cancelled their booking for %2$s at %3$s.</string>
    <string name="notif_guest_status_msg">Your booking on %1$s at %2$s is now %3$s.</string>
    <string name="guest_home">GUEST HOME</string>
    <string name="staff_home">STAFF HOME</string>
</resources>
